--- a/src/notebook/metrics.ipynb
+++ b/src/notebook/metrics.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(Union{Nothing, Bool}[true nothing … nothing nothing; true nothing … nothing nothing; … ; nothing nothing … true nothing; nothing nothing … nothing true], Dict(1144 => 1145, 1175 => 1176, 719 => 720, 1028 => 1029, 699 => 700, 831 => 832, 1299 => 1300, 1074 => 1075, 319 => 320, 687 => 688…), Dict(719 => [932, 933], 1028 => [69, 1241], 699 => [83, 905], 831 => [716], 1074 => [995, 1282], 319 => [36, 423, 424], 687 => [721, 889], 185 => [69, 256], 823 => [83, 1043], 1090 => [1298, 1299]…))"
+       "1136"
       ]
      },
      "metadata": {},
@@ -17,19 +17,36 @@
    ],
    "source": [
     "using Pkg\n",
+    "# Pkg.update()\n",
     "Pkg.instantiate()\n",
     "\n",
     "using DevCommunities\n",
     "using SimpleHypergraphs\n",
     "\n",
-    "g = build_hg(\"../../hgs/apl.hg\")"
+    "g = build_hg(\"../../hgs/apl.hg\")\n",
+    "num_nodes = nhv(g[1])\n",
+    "num_edges = nhe(g[1])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ddevin/Documents/MoCHy/run_exact.sh: line 4: 83087 Killed: 9               /Users/ddevin/Documents/MoCHy/exact $1 > /Users/ddevin/Documents/vscode/DevCommunities/script_dump/dump.txt\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Any[]\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -63,7 +80,46 @@
    "source": [
     "\n",
     "# rm1 = random_model(500, 500)\n",
+    "# average on 10 run | grafo casuale = numero nodes del real graph\n",
+    "# preferential attachament\n",
     "# hg_save(\"../../randoms/random500\", rm1)\n",
+    "# prob = 0.7\n",
+    "# for i in range(1..10)\n",
+    "\n",
+    "\n",
+    "# rm_pa = random_preferential_model(num_nodes, 0.5)\n",
+    "# hg_save(\"../../randoms/randomXXX\", rm_pa)\n",
+    "\n",
+    "# # open file\n",
+    "# r = open(\"../../randoms/randomXXX\")\n",
+    "# # substitue in each line \"=true\" with \",\"\n",
+    "# run(`sed -i '' 's/=true/,/g' ../../randoms/randomXXX`)\n",
+    "# # remove first line\n",
+    "# run(`sed -i '' '1d' ../../randoms/randomXXX`)\n",
+    "\n",
+    "# run(`$x $path1 $option1 $option2 $path2`)\n",
+    "\n",
+    "\n",
+    "run(`bash /Users/ddevin/Documents/MoCHy/run_exact.sh \"/Users/ddevin/Documents/vscode/DevCommunities/randoms/randomXXX.hg\"`)\n",
+    "# run(`bash /Users/ddevin/Documents/MoCHy/run_exact.sh \"/Users/ddevin/Documents/vscode/DevCommunities/hgs/apl.hg\"`)\n",
+    "r = open(\"/Users/ddevin/Documents/vscode/DevCommunities/script_dump/dump.txt\")\n",
+    "array = []\n",
+    "for line in eachline(r)\n",
+    "    if occursin(\"motif\", line)\n",
+    "        if occursin(\"counting\", line)\n",
+    "            continue\n",
+    "        end\n",
+    "        # find integers in line after \":\"\n",
+    "        motif = parse.(Int64, split(line, \":\")[2:end])\n",
+    "        push!(array, motif[1])\n",
+    "    end\n",
+    "end\n",
+    "println(array)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "# end\n",
     "#1000x1000\n",
     "# motifs_random = [0,87,472,256977,14,112208,0,218303,501,3758514,0,5467523,9213,319352,7407153,144547536,0,32143,0,412031,4,1688973,0,302,112254,1626941]\n",
     "#100x100\n",
@@ -74,13 +130,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "cps (generic function with 2 methods)"
+       "cps (generic function with 1 method)"
       ]
      },
      "metadata": {},
@@ -112,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2788,15 +2844,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.3",
+   "display_name": "Julia 1.8.3",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.3"
+   "version": "1.8.3"
   },
   "orig_nbformat": 4
  },
