--- a/src/notebook/metrics.ipynb
+++ b/src/notebook/metrics.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -161,9 +161,9 @@
     "    degree_nodes = Dict{Int,Int}()\n",
     "    nodes_per_edge = Dict{Int,Vector{Int}}()\n",
     "\n",
+    "    print(nodes)\n",
     "    hg = Hypergraph(0,0)\n",
-    "\n",
-    "    for line in eachline(path)\n",
+    "    for line in eachline(\"../../hgs/apl.hg\")\n",
     "        # split elemnts of the line by comma\n",
     "        d = split(line, \",\")\n",
     "        vs = map(x -> parse(Int,(strip(replace(x, r\"\\[|\\]\" => \"\")))), d)\n",
@@ -187,8 +187,6 @@
     "        he_id = SimpleHypergraphs.add_hyperedge!(hg; vertices = vertices)\n",
     "        push!(nodes_per_edge, he_id => vs)  \n",
     "    end\n",
-    "\n",
-    "    \n",
     "\n",
     "    sum_degree_nodes = sum(values(degree_nodes))\n",
     "    sum_degree_edges = sum(values(length(nodes_per_edge)))\n",
@@ -214,21 +212,14 @@
     "        random_edges_probs[key] = pr\n",
     "    end\n",
     "\n",
-    "    sample_nodes = sample(collect(keys(sort(random_nodes_probs))), pweights(ProbabilityWeights(collect(values(sort(random_nodes_probs))))))\n",
-    "    sample_edges = sample(collect(keys(sort(random_edges_probs))), pweights(ProbabilityWeights(collect(values(sort(random_edges_probs))))))\n",
-    "\n",
     "    random_nodes = Dict{Int,Int}()\n",
     "    random_nodes_per_edge = Dict{Int,Vector{Int}}()\n",
     "\n",
     "    random_hg = Hypergraph(0,0)\n",
-    "    println(\"Number of nodes: $(length(sample_nodes))\")\n",
-    "    println(\"Number of edges: $(length(sample_edges))\")\n",
-    "    println(\"sum_degree_nodes: $sum_degree_nodes\")\n",
-    "    println(\"sum_degree_edges: $sum_degree_edges\")\n",
-    "    for i in 1:length(sum_degree_nodes)\n",
-    "        v = sample_nodes[i]\n",
-    "        e = sample_edges[i]\n",
     "\n",
+    "    for i in 1:sum_degree_nodes\n",
+    "        v = sample(collect(keys(sort(random_nodes_probs))), pweights(ProbabilityWeights(collect(values(sort(random_nodes_probs))))))\n",
+    "        e = sample(collect(keys(sort(random_edges_probs))), pweights(ProbabilityWeights(collect(values(sort(random_edges_probs))))))\n",
     "        if !haskey(random_nodes, v)\n",
     "            v_id = SimpleHypergraphs.add_vertex!(random_hg)\n",
     "            push!(random_nodes, v=>v_id)\n",
@@ -245,123 +236,57 @@
     "        he_id = SimpleHypergraphs.add_hyperedge!(random_hg; vertices = vertices)\n",
     "    end\n",
     "\n",
-    "    return random_hg\n",
-    "end"
+    "        return random_hg\n",
+    "    end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dict{Int64, Int64}()1341"
+      "Dict{Int64, Int64}()"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "sum_degree_nodes: 2352\n",
-      "sum_degree_edges: 1136\n",
-      "915"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "966\n"
-     ]
+     "data": {
+      "text/plain": [
+       "909×958 Hypergraph{Bool, Nothing, Nothing, Dict{Int64, Bool}}:\n",
+       " nothing  nothing  nothing  nothing  …  nothing  true             nothing\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing  true\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing  …  nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing      nothing\n",
+       " ⋮                                   ⋱  ⋮                     \n",
+       " nothing  nothing  nothing  nothing  …  nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing  …  nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing      nothing\n",
+       " nothing  nothing  nothing  nothing     nothing      nothing      nothing"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "using StatsBase\n",
-    "# rg = build_hg_randoms(\"../../hgs/apl.hg\")\n",
+    "rg = build_hg_randoms(\"../../hgs/apl.hg\")\n",
     "\n",
-    "nodes = Dict{Int,Int}()\n",
-    "degree_nodes = Dict{Int,Int}()\n",
-    "nodes_per_edge = Dict{Int,Vector{Int}}()\n",
     "\n",
-    "print(nodes)\n",
-    "hg = Hypergraph(0,0)\n",
-    "for line in eachline(\"../../hgs/apl.hg\")\n",
-    "    # split elemnts of the line by comma\n",
-    "    d = split(line, \",\")\n",
-    "    vs = map(x -> parse(Int,(strip(replace(x, r\"\\[|\\]\" => \"\")))), d)\n",
-    "    for v in vs\n",
-    "        if !haskey(nodes, v)\n",
-    "            v_id = SimpleHypergraphs.add_vertex!(hg)\n",
-    "            push!(nodes, v=>v_id)\n",
-    "        end\n",
-    "    end\n",
-    "    # add he \n",
-    "    vertices = Dict{Int, Bool}(nodes[v] => true for v in vs)\n",
-    "\n",
-    "    # count degree of each node\n",
-    "    for v in vs\n",
-    "        if !haskey(degree_nodes, v)\n",
-    "            degree_nodes[v] = 0\n",
-    "        end\n",
-    "        degree_nodes[v] += 1\n",
-    "    end\n",
-    "    \n",
-    "    he_id = SimpleHypergraphs.add_hyperedge!(hg; vertices = vertices)\n",
-    "    push!(nodes_per_edge, he_id => vs)  \n",
-    "end\n",
-    "\n",
-    "sum_degree_nodes = sum(values(degree_nodes))\n",
-    "sum_degree_edges = sum(values(length(nodes_per_edge)))\n",
-    "\n",
-    "function prob_nodes(v)\n",
-    "    return degree_nodes[v]/sum_degree_nodes\n",
-    "end\n",
-    "\n",
-    "function prob_edges(e)\n",
-    "    return length(nodes_per_edge[e])/sum_degree_edges\n",
-    "end\n",
-    "\n",
-    "random_nodes_probs = Dict{Int,Float64}()\n",
-    "random_edges_probs = Dict{Int,Float64}()\n",
-    "\n",
-    "for key in keys(nodes)\n",
-    "    pr = prob_nodes(key)\n",
-    "    random_nodes_probs[key] = pr\n",
-    "end\n",
-    "\n",
-    "for key in keys(nodes_per_edge)\n",
-    "    pr = prob_edges(key)\n",
-    "    random_edges_probs[key] = pr\n",
-    "end\n",
-    "\n",
-    "random_nodes = Dict{Int,Int}()\n",
-    "random_nodes_per_edge = Dict{Int,Vector{Int}}()\n",
-    "\n",
-    "random_hg = Hypergraph(0,0)\n",
-    "\n",
-    "for i in 1:sum_degree_nodes\n",
-    "    v = sample(collect(keys(sort(random_nodes_probs))), pweights(ProbabilityWeights(collect(values(sort(random_nodes_probs))))))\n",
-    "    e = sample(collect(keys(sort(random_edges_probs))), pweights(ProbabilityWeights(collect(values(sort(random_edges_probs))))))\n",
-    "    if !haskey(random_nodes, v)\n",
-    "        v_id = SimpleHypergraphs.add_vertex!(random_hg)\n",
-    "        push!(random_nodes, v=>v_id)\n",
-    "    end\n",
-    "\n",
-    "    if !haskey(random_nodes_per_edge, e)\n",
-    "        random_nodes_per_edge[e] = []\n",
-    "    end\n",
-    "    random_nodes_per_edge[e] = push!(random_nodes_per_edge[e], v)        \n",
-    "end\n",
-    "\n",
-    "for key in keys(random_nodes_per_edge)\n",
-    "    vertices = Dict{Int, Bool}(random_nodes[v] => true for v in random_nodes_per_edge[key])\n",
-    "    he_id = SimpleHypergraphs.add_hyperedge!(random_hg; vertices = vertices)\n",
-    "end\n",
     "\n",
     "# println(nhv(random_hg))\n",
     "# println(nhe(random_hg))\n",
