--- a/src/notebook/metrics.ipynb
+++ b/src/notebook/metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -2843,44 +2843,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building hg for tag: julia\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building hg for tag: kotlin\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building hg for tag: lisp\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building hg for tag: python\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using Formatting\n",
     "\n",
     "# p = Plots.plot()\n",
     "\n",
-    "for i in 12:20\n",
+    "for i in 16:20\n",
     "    # g = build_hg(\"../../hgs/apl.hg\")\n",
     "    println(\"building hg for tag: \"*my_tags_so[i])\n",
     "    g = build_hg(\"../../hgs/\"*my_tags_so[i]*\".hg\")\n",
@@ -2928,6 +2899,31 @@
     "    # Plots.plot!(p,centrality,label=my_tags_so[i])\n",
     "    # Plots.savefig(p, \"../../results/centrality/\"*my_tags_so[i]*\"centrality\"*\".png\")\n",
     "    flush(stdout)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "betweeness = Dict{Int, Dict{Symbol, Float64}}()\n",
+    "\n",
+    "for s=2:3\n",
+    "    println(\"building hg for tag: js\")\n",
+    "    hg = build_hg(\"../../hgs/javascript.hg\")\n",
+    "    hg1 = hg[1]\n",
+    "    A = SimpleHypergraphs.adjacency_matrix(hg1; s=s)\n",
+    "    G = Graphs.SimpleGraph(A)\n",
+    "    bc = Graphs.betweenness_centrality(G)\n",
+    "    flush(stdout)\n",
+    "    # for v=1:nhv(hg1)\n",
+    "    #     push!(\n",
+    "    #         get!(betweeness, s, Dict{Symbol, Int}()),\n",
+    "    #         get_vertex_meta(hg1, v) => bc[v]\n",
+    "    #     )\n",
+    "    # end\n",
     "end"
    ]
   }
